[project]
name = "openvino-notebooks"
version = "0.1.0"
description = ""
authors = [{ name = "Hank", email = "Engalpha@node-health.com" }]
readme = "README.md"
requires-python = ">3.11.0,<3.13"
# dependencies = ["nncf (>=2.16.0)", "openvino (>=2025.1.0)", "labelimg (>=1.8.6,<2.0.0)"]

[tool.poetry.dependencies]
# python = "^3.9"
# jupyterlab = "*"
# ipywidgets = "*"
# ipykernel = ">=5.0"
# ipython = ">=7.16.3"


# 數據科學和機器學習相關
# numpy = "<2.0"
numpy = "==1.26.4"
pandas = "^2.2.3"
scipy = "^1.14.0"
scikit-learn = "^1.5.2"

# 圖像處理
pillow = "^10.4.0"

# 網頁應用和API
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
python-multipart = "^0.0.9"
pyngrok = "^7.2.1"

# 開發和調試工具
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
rich = "^13.7.1"

# 可視化
matplotlib = "3.7.0"

# 打包工具
# cx-freeze = "^7.2.7"

# 瑕疵檢測
anomalib = "^1.2.0"
tqdm = "^4.67.1"
lightning = "^2.5.0.post0"
imgaug = "^0.4.0"
kornia = "^0.7.4"
timm = "^1.0.12"
einops = "^0.8.0"
freia = "^0.2"
python-dotenv = "^1.0.1"
open-clip-torch = "^2.29.0"
onnx = "1.16.1"
wandb = "^0.19.3"
# ollama = "<=0.3.3"
plotly = "^5.24.1"
openvino = ">=2025.1.0"
pyueye = "^4.96.952"
ids-peak-ipl = "^1.14.0.0.2"
ids-peak = "^1.10.0.0.3"
ids-peak-afl = "^1.6.1.0.1"
albumentations = "^2.0.3"

# 其他
toml = "^0.10.2"
kaleido = "0.2.1"
isat-sam = "^1.2.9"
opencv-python = "^4.10.0.84"
httptools = "^0.6.4"
imagingcontrol4 = "*"
tensorboard = "^2.19.0"
# imagingcontrol4pyside6 = "*"
# pyside6 = "^6.9.0"
qasync = "^0.27.1"
api-client = "^1.3.1"
memory-profiler = "^0.61.0"
pympler = "^1.1"
viztracer = "^1.0.4"
wmi = "^1.5.1"
pydeps = "^3.0.1"
vizplugins = "^0.1.3"
ipdb = "^0.13.13"
transformers = "^4.57.6"
tensorrt = "^10.15.1.29"

[tool.poetry.group.windows.dependencies]
# Windows 專用依賴
torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.4.1%2Bcu124-cp311-cp311-win_amd64.whl#sha256=b0b3a904bc66cd6f54652d33b8509b5c64b862763c073a15cf740161c77debbc" }
torchvision = { url = "https://download.pytorch.org/whl/cu124/torchvision-0.19.1%2Bcu124-cp311-cp311-win_amd64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/cu124/torchaudio-2.4.1%2Bcu124-cp311-cp311-win_amd64.whl#sha256=9be91e449abfa76cde0c5e1a4fb91200668eb4fa9177daa131bf335e8f13092a" }
PyQt5 = { url = "https://files.pythonhosted.org/packages/ca/ac/596e8ca16fd0634542d874c0d79219fc527ea7de73a5000092f60ecbf6e9/PyQt5-5.15.10-cp37-abi3-win_amd64.whl" }
PyQt5-Qt5 = { url = "https://files.pythonhosted.org/packages/py3/P/PyQt5_Qt5/PyQt5_Qt5-5.15.2-py3-none-win_amd64.whl" }
# Detectron2 預編譯 wheel (第三方維護，支援 Windows)
# PyTorch 2.4.0 + CUDA 12.1 + Python 3.11 + Windows
detectron2 = { url = "https://github.com/MiroPsota/torch_packages_builder/releases/download/detectron2-0.6%2Bfd27788/detectron2-0.6%2Bfd27788pt2.4.0cu121-cp311-cp311-win_amd64.whl" }



# ## torch相關下載
# # 這是給python3.11使用
# # torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.4.0%2Bcu124-cp311-cp311-win_amd64.whl#sha256=b1d40a13a6fd3f92aa5728ab84756571381b6b1ccae7ce62037c28d539687c25" }
# # torchaudio = { url = "https://download.pytorch.org/whl/cu124/torchaudio-2.4.0%2Bcu124-cp311-cp311-win_amd64.whl#sha256=12f7f2b1c0fb435875175247083c8aca056face6bc5388b9a494a90ca197632c" }
# # torchvision = { url = "https://download.pytorch.org/whl/cu124/torchvision-0.19.0%2Bcu124-cp311-cp311-win_amd64.whl#sha256=42ac55c0fd1cdea14c20168f0b24eba7fc2d2eb4ef75196ded7b76f81dee619f" }
# # 這是給cpu使用
# torch = "*"
# torchaudio = "*"
# torchvision = "*"


# openvino = "^2024.3.0"
# nncf = "*"
# opencv-python = "*"
# seaborn = "*"
# pandas = "*"
# scikit-learn = "*"
# tqdm = "*"
# matplotlib = "*"
# numpy = "<2"
# gradio = "^4.40.0"
# segment-anything = "^1.0"
# requests = "^2.32.3"
# datasets = "^2.20.0"
# # onnx = "^1.16.2"
# onnx = "1.16.1"
# einops = "^0.8.0"
# # transformers = "^4.44.0"
# transformers = "^4.43.0"


# ## 其他的安裝項目
# # transformers-stream-generator = "^0.0.5"
# # tiktoken = "^0.7.0"
# # bitsandbytes = "^0.43.3"
# # optimum = "^1.21.3"
# # optimum-intel = "^1.18.2"
# # qwen-agent = ">=0.0.6"
# # modelscope-studio = ">=0.4.0"
# # langchain-community = "^0.2.4"
# # langchain = "^0.2.3"
# # wikipedia = "^1.4.0"
# # accelerate = "^0.33.0"


# YOLOv11 支援 (使用 pip 直接安裝以繞過版本衝突)
ultralytics = "^8.3"
# nncf = ">=2.16.0"




[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
