[project]
name = "yolov11-trt-starter-kit"
version = "0.1.0"
description = ""
authors = [{ name = "Hank", email = "Engalpha@node-health.com" }]
requires-python = ">=3.10,<3.11"

[tool.poetry]
package-mode = false
# dependencies = ["nncf (>=2.16.0)", "openvino (>=2025.1.0)", "labelimg (>=1.8.6,<2.0.0)"]

[tool.poetry.dependencies]
# python = "^3.9"
# jupyterlab = "*"
# ipywidgets = "*"
# ipykernel = ">=5.0"
# ipython = ">=7.16.3"


# 數據科學和機器學習相關
# numpy = "<2.0"
numpy = "==1.26.4"
pandas = "^2.2.3"
scipy = "^1.14.0"
scikit-learn = "^1.5.2"

# 圖像處理
pillow = "^10.4.0"

# 網頁應用和API
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
python-multipart = "^0.0.9"
pyngrok = "^7.2.1"

# 開發和調試工具
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
rich = "^13.7.1"

# 可視化
matplotlib = "3.7.0"

# 打包工具
# cx-freeze = "^7.2.7"

# 瑕疵檢測
anomalib = "^1.2.0"
tqdm = "^4.67.1"
lightning = "^2.5.0.post0"
imgaug = "^0.4.0"
kornia = "^0.7.4"
timm = "^1.0.12"
einops = "^0.8.0"
freia = "^0.2"
python-dotenv = "^1.0.1"
open-clip-torch = "^2.29.0"
onnx = "1.16.1"
wandb = "^0.19.9"
# ollama = "<=0.3.3"
plotly = "^5.24.1"
openvino = ">=2025.1.0"
pyueye = "^4.96.952"
ids-peak-ipl = "^1.14.0.0.2"
ids-peak = "^1.10.0.0.3"
ids-peak-afl = "^1.6.1.0.1"
albumentations = "^2.0.3"

# 其他
toml = "^0.10.2"
kaleido = "0.2.1"
isat-sam = "^1.2.9"
opencv-python = "^4.10.0.84"
httptools = "^0.6.4"
imagingcontrol4 = "*"
tensorboard = "^2.19.0"
# imagingcontrol4pyside6 = "*"
# pyside6 = "^6.9.0"
qasync = "^0.27.1"
api-client = "^1.3.1"
memory-profiler = "^0.61.0"
pympler = "^1.1"
viztracer = "^1.0.4"
wmi = "^1.5.1"
pydeps = "^3.0.1"
vizplugins = "^0.1.3"
ipdb = "^0.13.13"
transformers = "^4.57.6"
tensorrt-cu12 = "^10.15.1.29"  # cu12 for CUDA 12.x (cu13 會與 CUDA 12.8 不相容)

# YOLOv11 支援 (使用 pip 直接安裝以繞過版本衝突)
ultralytics = "^8.3"
# nncf = ">=2.16.0"


[tool.poetry.group.windows]
optional = true

[tool.poetry.group.windows.dependencies]
# Windows 專用依賴 — PyTorch 2.10.0+cu128 (cp310, win_amd64)
# 安裝命令：poetry install --with windows
torch = { url = "https://download.pytorch.org/whl/cu128/torch-2.10.0%2Bcu128-cp310-cp310-win_amd64.whl#sha256=14d2831b9292c3a9b0d80116451315a08ffe8db745d403d06000bc47165b1f9e" }
torchaudio = { url = "https://download.pytorch.org/whl/cu128/torchaudio-2.10.0%2Bcu128-cp310-cp310-win_amd64.whl#sha256=4c4a5976ae4ca70ed2e99b92c56cf42630d34c2f71f0e021a4c6b917b375cea7" }
torchvision = { url = "https://download.pytorch.org/whl/cu128/torchvision-0.25.0%2Bcu128-cp310-cp310-win_amd64.whl#sha256=cef372be1a78856000cd04b72e5d738a0d851022c68b6900cbbd61dc91c25f79" }
PyQt5 = { url = "https://files.pythonhosted.org/packages/ca/ac/596e8ca16fd0634542d874c0d79219fc527ea7de73a5000092f60ecbf6e9/PyQt5-5.15.10-cp37-abi3-win_amd64.whl" }
PyQt5-Qt5 = { url = "https://files.pythonhosted.org/packages/py3/P/PyQt5_Qt5/PyQt5_Qt5-5.15.2-py3-none-win_amd64.whl" }


[tool.poetry.group.jetson]
optional = true

# ============================================================
# Jetson Orin 安裝說明 (JetPack 6.1, Python 3.10, linux_aarch64)
# ============================================================
# 在 Jetson 上的使用步驟：
#   1. 取消下方各行的 # 號
#   2. 執行：poetry install --with jetson
#   3. 在 Jetson 上執行 export（engine 檔不可跨裝置）：
#      python -c "from ultralytics import YOLO; YOLO('model.pt').export(format='engine', half=True)"
#
# TensorRT engine 綁定目標裝置的 GPU 架構與 TRT 版本，不可從 x86 移植！
# ============================================================
[tool.poetry.group.jetson.dependencies]
# torch = { url = "https://github.com/ultralytics/assets/releases/download/v0.0.0/torch-2.10.0-cp310-cp310-linux_aarch64.whl" }
# torchvision = { url = "https://github.com/ultralytics/assets/releases/download/v0.0.0/torchvision-0.25.0-cp310-cp310-linux_aarch64.whl" }
# onnxruntime-gpu = { url = "https://github.com/ultralytics/assets/releases/download/v0.0.0/onnxruntime_gpu-1.23.0-cp310-cp310-linux_aarch64.whl" }


# openvino = "^2024.3.0"
# nncf = "*"
# opencv-python = "*"
# seaborn = "*"
# pandas = "*"
# scikit-learn = "*"
# tqdm = "*"
# matplotlib = "*"
# numpy = "<2"
# gradio = "^4.40.0"
# segment-anything = "^1.0"
# requests = "^2.32.3"
# datasets = "^2.20.0"
# # onnx = "^1.16.2"
# onnx = "1.16.1"
# einops = "^0.8.0"
# # transformers = "^4.44.0"
# transformers = "^4.43.0"


## 其他的安裝項目
# # transformers-stream-generator = "^0.0.5"
# # tiktoken = "^0.7.0"
# # bitsandbytes = "^0.43.3"
# # optimum = "^1.21.3"
# # optimum-intel = "^1.18.2"
# # qwen-agent = ">=0.0.6"
# # modelscope-studio = ">=0.4.0"
# # langchain-community = "^0.2.4"
# # langchain = "^0.2.3"
# # wikipedia = "^1.4.0"
# # accelerate = "^0.33.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
